@@ -1,3 +1,11 @@
+Wed Nov 12 19:03:02 1997  Tom Yu  <tlyu@mit.edu>
+
+	* forward.c (rd_and_store_for_creds): Don't do the chown.  Avoids
+	a security hole. [krb5-appl/494]
+
+	* krshd.c (recvauth): chown the ccache explicitly, as
+	rd_and_store_for_creds no longer does so. [krb5-appl/494]
+
 Thu Nov  6 22:04:26 1997  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* v4rcp.c: Use error_message(errno) instead of using
